# zmead

./: .env.docker.example  .gitignore  ADMIN_CONFIG_IMPLEMENTATION.md  AI_AGENT_TEST_REPORT.md  BETA_ACCESS_IMPLEMENTATION.md  BUG_FIXES_2025-12-04.md  CLAUDE.md  Dockerfile.allinone  FILE_UPLOAD_FIX_SUMMARY.md  FRONTEND_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_TEST_STATUS.md  MCP_JSONRPC_MIGRATION.md  MULTIMODAL_FILE_UPLOAD_PROGRESS.md  README.md  STREAMING_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TEST_SUMMARY.md  cloudfront-config.json  docker-compose.yml  s3-bucket-policy.json  s3-cors.json  test_react_agent.py
ai-orchestrator/: .dockerignore  .env.example  .gitignore  ATTACHMENT_HANDLING_GUIDE.md  CAMPAIGN_AUTOMATION_INTEGRATION.md  CHECKPOINT_VERIFICATION.md  CONVERSATION_HISTORY_FIX.md  Dockerfile  FINAL_VERIFICATION_REPORT.md  HUMAN_IN_LOOP_IMPLEMENTATION.md  I18N_REFACTORING.md  LANDING_PAGE_INTEGRATION_SUMMARY.md  MIGRATION_TO_REACT.md  NOVA_SEARCH_IMPLEMENTATION.md  PHASE3_VERIFICATION.md  README.md  V3_VERIFICATION_REPORT.md  VIDEO_GENERATION_GUIDE.md  WEB_SEARCH_UNIFIED.md  manual_test_flows.py  performance_test.py  pyproject.toml  requirements.txt  test_video_generation.py  verify_v3.py  verify_video_tool.py
ai-orchestrator/app/: __init__.py  main.py
ai-orchestrator/app/agents/: __init__.py  base.py  campaign.py  creative.py  landing_page.py  market.py  mcp_integration.py  performance.py  registry.py  setup.py
ai-orchestrator/app/api/: __init__.py  chat.py  (+4 more)
ai-orchestrator/docs/: ARCHITECTURE.md  INTEGRATION_SUMMARY.md  LANDING_PAGE_HOSTING_EXPORT_SUMMARY.md  TASK_12_SUMMARY.md  TASK_15_2_SUMMARY.md  TASK_15_3_DUAL_TRACKING_SUMMARY.md  TASK_16_ERROR_HANDLING_SUMMARY.md  TASK_9_SUMMARY.md
ai-orchestrator/test_outputs/: test_video_info.txt
ai-orchestrator/tests/: README_INTEGRATION_TESTS.md  __init__.py  test_campaign_automation_integration.py  test_checkpoint_verification.py  test_context_resolution_property.py  test_execution_order_property.py  test_gemini3_client.py  test_human_in_loop.py  test_intent_recognition_property.py  test_landing_page_integration.py  test_phase2_checkpoint.py  test_reporting_node.py  test_retry_property.py
backend/: .env.example  CELERY.md  DEV_AUTH.md  Dockerfile  README.md  WEBSOCKET_CHAT.md  example_storage_usage.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: README_CORS.md  apply_gcs_cors.py  apply_gcs_cors.sh  configure_gcs_cors.json
backend/tests/: README_INTEGRATION_TESTS.md  conftest.py  test_account_deletion.py  test_config.py  test_data_export.py  test_data_export_unit.py  test_rate_limit.py  test_security.py  test_websocket.py
(+602 files in other folders)
